kustomize/public-api/base/api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api

spec:
  replicas: 1
  selector:
    matchLabels:
      app: public-api
  template:
    metadata:
      name: public-api
      labels:
        app: public-api
    spec:
      containers:
      - name: public-api
        image: roelvandegrint.azurecr.io/public-api
        resources:
          limits:
            memory: 128Mi
            cpu: 500m
      imagePullSecrets:
        - name: roelvandegrint.azurecr.io
