kustomize/public-api/base/mongodb.service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-frontend
spec:
  selector:
    app: mongob-frontend
  ports:
  - port: 27017
    targetPort: 27017
