kustomize/public-api/base/api.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: public.captoso.eu
    http:
      paths:
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: public-api
            port:
              number: 80
  - host: backend.captoso.eu
    http:
      paths:
      - pathType: Prefix
        path: '/'
        backend:
          service:
            name: backend-api
            port:
              number: 80
